# algeo

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.cargo/: config.toml
docs/: all.html  crates.js  index.html  search-index.js  source-files.js
docs/algeo/: index.html  sidebar-items.js
docs/algeo/poly/: fn.v.html  fn.x.html  fn.y.html  index.html  sidebar-items.js  struct.Polynomial.html
docs/core/: index.html
docs/core/frac/: sidebar-items.js
docs/darling/: trait.FromField.html  trait.FromVariant.html
docs/darling/error/: struct.IntoIter.html
docs/darling/usage/: trait.UsesLifetimes.html  trait.UsesTypeParams.html
docs/itertools/: enum.Either.html
docs/proc_macro2/: all.html
docs/syn/: all.html  fn.parse2.html  fn.parse_file.html  index.html  struct.BareFnArg.html  struct.TypeArray.html  struct.TypeGroup.html  struct.TypeInfer.html  struct.TypeNever.html  struct.TypePath.html  struct.TypeReference.html  struct.TypeTraitObject.html
docs/xops/: all.html  attr.binop.html  sidebar-items.js
docs/xops_core/: fn.binop_read.html  index.html  sidebar-items.js  struct.BinOpFn.html  struct.BinOpImpl.html  struct.BinOpOutput.html
docs/xops_macros/: attr.binop.html  attr.read_binop_impl.html
src/: lib.rs  main.rs
src/core/: element.rs  frac.rs  int.rs  matrix.rs  mod.rs  num.rs  rat.rs
src/lib/: frac.rs  mod.rs  num.rs  poly.rs  poly_dyn.rs
src/linalg/: algorithm.rs  cone.rs  mat.rs  mod.rs  util.rs
src/poly/: comp.rs  display.rs  div.rs  div_old.rs  elts.rs  macros.rs  mdeg.rs  mod.rs  newthing.rs  ord.rs  poly.rs  ring.rs  univariate.rs
(+155 files in other folders)
