[package]
name = "algeo"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hmcol/algeo"
description = """
Computer algebra, algebraic geometry, and related math.
"""
keywords = [ "math", "algebra", "geometry" ]
categories = [ "mathematics", "algorithms" ]

[build]
rustdocflags = [ "--html-in-header", "docs-header.html" ]

[dependencies]
xops = "0.1.1"
itertools = "0.10.1"
